WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
311934
[Win] Fix Windows build on clang 21
https://bugs.webkit.org/show_bug.cgi?id=311934
Summary
[Win] Fix Windows build on clang 21
Ian Grunert
Reported
2026-04-10 08:07:40 PDT
Some MS ABI mangling crashes, other small fixes.
Attachments
Add attachment
proposed patch, testcase, etc.
Ian Grunert
Comment 1
2026-04-11 06:06:36 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/62536
EWS
Comment 2
2026-04-12 05:28:13 PDT
Committed
311032@main
(265d1003ba32): <
https://commits.webkit.org/311032@main
> Reviewed commits have been landed. Closing PR #62536 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2026-04-12 05:29:13 PDT
<
rdar://problem/174598678
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug