[Win] Fix Windows build on clang 21 https://bugs.webkit.org/show_bug.cgi?id=311934

Reviewed by NOBODY (OOPS!).

Workaround MS ABI mangling problems.